# clima-data

./: 404.html  LICENSE-Apache-2.0  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  references.bib  setup.py  sitemap.xml
acknowledgments/: index.html
assets/cordex_variables_notes/: index.html
clima_data/: __init__.py  cordex.py  indices.py  stats.py  utils.py
cordex/: index.html
docs/: acknowledgments.md  cordex.md  index.md  indicators.md  references.bib
docs/assets/: cordex_variables.csv  cordex_variables_notes.md
full_bib/: index.html
indicators/: index.html
scripts/: compute_indices.py  download_cordex_data.py
search/: search_index.json
tests/: conftest.py  test_cordex_utils.py  test_realization_alignment.py  test_realization_alignment_integration.py
